# valuation

./: .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  PROJECT_STRUCTURE.md  README.md  pyproject.toml  stock_scenario_analysis.md.resolved
.claude/commands/: shallow-dive.md
.github/workflows/: SOLVER_README.md  solver-codex.yml  solver-gemini.yml  solver.yml  solver_gemini.py
data/: readme.md
data/bronze/: cache.py  ingest_stooq_dump.py  ingest_stooq_dump_test.py  update.py  update_jp.py  update_krx.py
data/gold/: aggregation.py  aggregation_test.py  build.py  panels.py  transforms.py  transforms_test.py
data/silver/: build.py
equity_analysis.egg-info/: PKG-INFO
example/tickers/: japan_screening.txt  kr_all.txt  kr_filtered.txt  nikkei225.txt  russell1000.txt
knowledge/: 가치평가_본질.md  가치평가_프리미엄.md  경영진_지배구조.md  경쟁력_분석.md  벤저민_그레이엄_안전마진.md  성장주_투자.md  워런_버핏_경제적해자.md  투자_프레임워크_SWOT_매핑.md  피터_린치.md  할인율_기대수익률.md  현대_투자환경_안전마진.md
output/: screening_20260328.html  screening_20260329.html
playbook/: SHALLOW_DIVE.md
playbook/buffett/: DEEP_DIVE.md  SHALLOW_DIVE.md
playbook/fisher/: DEEP_DIVE.md  EXPLORATION_PIPELINE.md  GROWTH_INVESTING_DISCUSSION.md  PHILOSOPHY.md  (+3 more)
research/: 192080-KS.md  DEEP_DIVE.md  README.md  SENSING_LOG.md  SHALLOW_DIVE.md  _template.md  exchange-comparison-2026.md
scenarios/: POLICY_CATALOG.md
screening/: RATIONALE.md  run.py
scripts/: check-no-push-to-main.sh  filter_kr_by_mcap.py
shared/: ticker.py  ticker_test.py
valuation/: RATIONALE.md  README.md  data_loader.py  run.py
valuation.egg-info/: PKG-INFO
(+128 files in other folders)
